website: RU - sync ru/platforms pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D53994

--- a/website/content/ru/platforms/_index.adoc
+++ b/website/content/ru/platforms/_index.adoc
@@ -5,12 +5,6 @@ sidenav: developers
 
 include::shared/ru/urls.adoc[]
 
-//
-// The FreeBSD Russian Documentation Project
-//
-// Original EN revision (20.11.2023): 96d6c43f19c20c0e3322e38ffbef4a134aa9df08
-//
-
 = Платформы
 
 == Поддерживаемые платформы
@@ -18,25 +12,109 @@ include::shared/ru/urls.adoc[]
 Вот список платформ, которые поддерживает FreeBSD.
 
 [.tblbasic]
-[cols=",,,,",options="header",]
+[cols=",,,,,",options="header",]
 |===
-|Название платформы |TARGET_ARCH |link:{committers-guide}#archs[Уровень поддержки] в 13.x |link:{committers-guide}#archs[Уровень поддержки] в 14.x |link:{committers-guide}#archs[Уровень поддержки] в 15.x (прогнозный)
-|64-разрядная x86 |link:amd64[amd64] |Уровень 1 |Уровень 1 |Уровень 1
-|32-разрядная x86 |link:i386[i386] |Уровень 2 |Уровень 2 |Не поддерживается
-|64-разрядная ARMv8 |link:arm[aarch64] |Уровень 1 |Уровень 1 |Уровень 1
-|32-разрядная ARMv6 |link:arm[armv6] |Уровень 2 |Уровень 3 |Не поддерживается
-|32-разрядная ARMv7 |link:arm[armv7] |Уровень 2 |Уровень 2 |Уровень 2
-|32-разрядная MIPS без математического модуля |link:mips[mips, mipsel] |Уровень 2 |Не поддерживается |Не поддерживается
-|32-разрядная MIPS с математическим модулем |link:mips[mipshf, mipselhf] |Уровень 2 |Не поддерживается |Не поддерживается
-|32-разрядная MIPS n32 |link:mips[mipsn32] |Уровень 2 |Не поддерживается |Не поддерживается
-|64-разрядная MIPS без математического модуля |link:mips[mips64, mips64el] |Уровень 2 |Не поддерживается |Не поддерживается
-|64-разрядная MIPS с математическим модулем |link:mips[mips64hf, mips64elhf] |Уровень 2 |Не поддерживается |Не поддерживается
-|32-разрядная PowerPC |link:ppc[powerpc] |Уровень 2 |Уровень 2 |Не поддерживается
-|32-разрядная PowerPC с SPE |link:ppc[powerpcspe] |Уровень 2 |Уровень 2 |Не поддерживается
-|64-разрядная PowerPC с прямым порядком байтов |link:ppc[powerpc64] |Уровень 2 |Уровень 2 |Уровень 2
-|64-разрядная PowerPC с обратным порядком байтов |link:ppc[powerpc64le] |Уровень 2 |Уровень 2 |Уровень 2
-|64-разрядная RISC-V |https://wiki.freebsd.org/riscv[riscv64] |Уровень 2 |Уровень 2 |Уровень 2
-|64-разрядная RISC-V без математического модуля |https://wiki.freebsd.org/riscv[riscv64sf] |Уровень 2 |Не поддерживается |Не поддерживается
+|Название платформы |TARGET_ARCH
+|link:{committers-guide}#archs[Уровень поддержки] в 13.x
+|link:{committers-guide}#archs[Уровень поддержки] в 14.x
+|link:{committers-guide}#archs[Уровень поддержки] в 15.x
+|link:{committers-guide}#archs[Уровень поддержки] в 16.x (прогнозный)
+
+|64-разрядная x86 |link:amd64[amd64]
+|Уровень 1
+|Уровень 1
+|Уровень 1
+|Уровень 1
+
+|32-разрядная x86 |link:i386[i386]
+|Уровень 2
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+
+|64-разрядная ARMv8 |link:arm[aarch64]
+|Уровень 1
+|Уровень 1
+|Уровень 1
+|Уровень 1
+
+|32-разрядная ARMv6 |link:arm[armv6]
+|Уровень 2
+|Уровень 3
+|Не поддерживается
+|Не поддерживается
+
+|32-разрядная ARMv7 |link:arm[armv7]
+|Уровень 2
+|Уровень 2
+|Уровень 2
+|Уровень 2
+
+|32-разрядная MIPS без математического модуля |link:mips[mips, mipsel]
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+|Не поддерживается
+
+|32-разрядная MIPS с математическим модулем |link:mips[mipshf, mipselhf]
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+|Не поддерживается
+
+|32-разрядная MIPS n32 |link:mips[mipsn32]
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+|Не поддерживается
+
+|64-разрядная MIPS без математического модуля |link:mips[mips64, mips64el]
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+|Не поддерживается
+
+|64-разрядная MIPS с математическим модулем |link:mips[mips64hf, mips64elhf]
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+|Не поддерживается
+
+|32-разрядная PowerPC |link:ppc[powerpc]
+|Уровень 2
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+
+|32-разрядная PowerPC с SPE |link:ppc[powerpcspe]
+|Уровень 2
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+
+|64-разрядная PowerPC с прямым порядком байтов |link:ppc[powerpc64]
+|Уровень 2
+|Уровень 2
+|Уровень 2
+|Уровень 2
+
+|64-разрядная PowerPC с обратным порядком байтов |link:ppc[powerpc64le]
+|Уровень 2
+|Уровень 2
+|Уровень 2
+|Уровень 2
+
+|64-разрядная RISC-V |https://wiki.freebsd.org/riscv[riscv64]
+|Уровень 2
+|Уровень 2
+|Уровень 2
+|Уровень 2
+
+|64-разрядная RISC-V без математического модуля |https://wiki.freebsd.org/riscv[riscv64sf]
+|Уровень 2
+|Не поддерживается
+|Не поддерживается
+|Не поддерживается
 |===
 
 == Неподдерживаемые платформы
@@ -54,3 +132,9 @@ include::shared/ru/urls.adoc[]
 |PC98 |pc98 |link:../releases/#rel11-4[11.4]
 |64-разрядная SPARCv9 |sparc64 |link:../releases/#rel12-4[12.4]
 |===
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (29.10.2025): 586808e85c27369cf1aad9f2f75d40d61b74260c
+//
