--- a/website/content/ru/platforms/amd64.adoc
+++ b/website/content/ru/platforms/amd64.adoc
@@ -10,35 +10,37 @@ include::shared/ru/urls.adoc[]
 [.right]
 link:../../../gifs/daemon_hammer.jpg[image:../../../gifs/daemon_hammer-tn15.jpg[Даемон BSD, размахивающий кузнечным молотом]]
 
-На этой странице размещена информация о переносе FreeBSD на архитектуры AMD64 компании http://www.amd.com/[AMD] и http://www.intel.com/info/em64t[Intel(R) 64]. Архитектура AMD64 ранее носила название "`Hammer`". Архитектура Intel 64 была известна как Yamhill, Clackamas Technology (CT), IA-32e и EM64T (Extended Memory 64-bit Technology). Обычно платформа более известна как "`x86-64`" или "`x64`".
+На этой странице размещена информация о переносе FreeBSD на архитектуры AMD64 компании http://www.amd.com/[AMD] и http://www.intel.com/info/em64t[Intel(R) 64]. Обычно платформа более известна как "`x86-64`" или "`x64`". FreeBSD/amd64 подходит для работы практически на всех современных процессорах AMD и Intel.
 
-Архитектура AMD64 используется в процессорах AMD Opteron(TM), AMD Athlon(TM) 64, AMD Turion(TM) 64 и в более новых процессорах AMD Sempron(TM).
+Архитектура AMD64 ранее носила название "`Hammer`". Архитектура Intel 64 была известна как Yamhill, Clackamas Technology (CT), IA-32e и EM64T (Extended Memory 64-bit Technology).
 
-Intel vPro(TM), Intel Celeron D (некоторые модели начиная с "`Prescott`"), Intel Centrino(R) Duo, Intel Centrino(R) Pro, Intel Viiv(TM), Intel Core(TM)2 Extreme, Intel Core(TM)2 Quad, Intel Core(TM)2 Duo, Intel Xeon (3000-серии, 5000-серии, и 7000-серии) процессоры используют архитектуру Intel(R)64.
+Архитектура AMD64 используется в процессорах AMD Sempron(TM), AMD Opteron(TM), AMD Athlon(TM) 64, AMD Turion(TM) 64, AMD Phenom(TM), AMD EPYC(TM) и в процессорах с ядрами AMD Zen.
 
-== Состояние:
+Intel vPro(TM), Intel Celeron D (некоторые модели начиная с "`Prescott`"), Intel Centrino(R) Duo, Intel Centrino(R) Pro, Intel Viiv(TM), Intel Core(TM)2 Extreme, Intel Core(TM)2 Quad, Intel Core(TM)2 Duo, Intel Xeon (3000-серии, 5000-серии, и 7000-серии) и процессоры Intel Core(TM) серии i используют архитектуру Intel(R)64.
+
+== Состояние
 
 В настоящий момент FreeBSD/amd64 может работать в 64-разрядном многопользовательском режиме, как в однопроцессорном, так и в многопроцессорном режиме.
 
-Платформа AMD64 в настоящий момент считается платформой FreeBSD link:{committers-guide}#archs[Tier-1] уровня.
+Платформа AMD64 в настоящий момент считается платформой FreeBSD link:{committers-guide}#archs[уровня 1].
 
 == Информационные ресурсы, относящиеся к FreeBSD/amd64
 
-* http://lists.freebsd.org/mailman/listinfo/freebsd-amd64[Список рассылки FreeBSD/amd64]
+* https://lists.freebsd.org/subscription/freebsd-amd64[Список рассылки FreeBSD/amd64]
 
 == Другие интересные ссылки
 
 === Документация по AMD64
 
-* http://support.amd.com/us/Processor_TechDocs/32200.pdf[Спецификация на архитектуру AMD x86-64]
-* http://support.amd.com/us/Processor_TechDocs/24592_APM_v1.pdf[Руководство прикладного программиста по архитектуре AMD64]
-* http://support.amd.com/us/Processor_TechDocs/24593_APM_v2.pdf[Руководство системного программиста по архитектуре AMD64]
-* http://www.x86-64.org/documentation/abi.pdf[Рабочая документация на специфичный для процессора AMD x86-64 двоичный интерфейс приложений (ABI)]
-
-=== Программные средства
-
-* http://www.x86-64.org/downloads[Симуляторы и инструментальные пакеты Bochs и Simics]
+* https://www.amd.com/content/dam/amd/en/documents/processor-tech-docs/programmer-references/40332.pdf[Руководство программиста по архитектуре AMD64 (тома 1-5)]
+* https://web.archive.org/web/20231031162945/www.intel.com/content/dam/develop/external/us/en/documents/mpx-linux64-abi.pdf[Дополнение System V ABI для архитектуры AMD64 (с моделями программирования LP64 и ILP32)]
 
 === Близкие проекты
 
 * http://www.NetBSD.org/Ports/amd64/[NetBSD/amd64]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (01.02.2025): 7f7a1dccae35aa03a3f93b8d83d7f4c0b1516199
+//
