--- a/website/content/ru/platforms/arm.adoc
+++ b/website/content/ru/platforms/arm.adoc
@@ -8,29 +8,122 @@ include::shared/ru/urls.adoc[]
 
 = Проект FreeBSD/ARM
 
-FreeBSD/ARM представляет собой порт системы FreeBSD, предназначенный для работы на архитектуре ARM и соответствующем аппаратном обеспечении. Целью проекта является обеспечение поддержки этой архитектуры и сопутствующего оборудования.
+== Введение
 
-== Замечания относительно аппаратного обеспечения FreeBSD/ARM
+На данной странице содержится информация о порте FreeBSD для 32- и 64-битных аппаратных платформ и архитектур ARM. Обсуждение портов ARM ведется в рассылке https://lists.freebsd.org/archives/freebsd-arm[freebsd-arm].
 
-На данный момент FreeBSD должна работать на системных платах, основанных на наборе i80321 компании Intel, в частности, с моделями IQ31244 и IQ80321. Поддержка всё ещё минимальна, и покрывает только процессор, шину PCI-X, Ethernet-адаптеры em(4), а также таймер и UART.
+== Оглавление
 
-Обеспечивается минимальная поддержка процессора StrongARM 1100, однако только в границах тех функций, что эмулирует Simics: CPU, UART и часы. Теоретически возможно выполнить загрузку на плате Assabet — той, что эмулирует Simics; о попытках сделать это, успешных или нет, ничего не известно.
+* <<status,Статус>>
+* <<hw,Замечания по аппаратному обеспечению>>
+* <<todo,Что предстоит сделать>>
+* <<links,Связанные ссылки>>
+* <<miniinst,Мини-руководство по установке>>
+* <<list,Рассылка>>
 
-== Что ещё необходимо сделать
+[[status]]
+== Статус
 
-* Необходимо добавить поддержку SATA.
-* Из NetBSD нужно перенести поддержку других устройств, таких как watchdog, i2c и шины.
+32-битная ARMv7 официально является архитектурой link:{committers-guide}#archs[уровня 2], так как link:../../[Проект FreeBSD] не предоставляет официальные релизы или предварительно собранные пакеты для этой платформы, поскольку она в основном ориентирована на встроенные системы. Тем не менее, FreeBSD/ARM активно разрабатывается и поддерживается, и предоставляет отличную основу для построения ARM-систем. FreeBSD/arm ранее поддерживала процессоры ARMv4 и ARMv5, но их поддержка была прекращена в версии 13.0. FreeBSD/armv7 включает поддержку SMP.
 
-== Информационные ресурсы, связанные с FreeBSD/ARM
+FreeBSD/arm64 поддерживает 64-битные процессоры ARMv8 и является архитектурой link:{committers-guide}#archs[уровня 1], начиная с версии 13.0. 64-битные ARM-платформы следуют набору стандартных соглашений, и одна сборка FreeBSD будет работать на оборудовании от разных производителей. В результате FreeBSD предоставляет официальные релизы для FreeBSD/arm64, а также доступны пакеты.
 
-* http://tisu.mit.jyu.fi/embedded/TIE345/luentokalvot/Embedded_3_ARM.pdf[Краткая история ARM]
-* http://www.netbsd.org/Ports/arm32/[Проект NetBSD Arm/32]
+[[hw]]
+== Замечания по аппаратному обеспечению FreeBSD/ARM
 
-== Краткое руководство по установке
+FreeBSD/arm и FreeBSD/armv6 поддерживают широкий спектр ARM-процессоров и плат для разработки. Не каждое периферийное устройство поддерживается на каждом процессоре или плате, хотя работа в этом направлении продолжается, и вклад всегда приветствуется. И наоборот, многие процессоры и платы, не указанные в списке, могут работать с минимальными необходимыми изменениями.
 
-{cognet} написал краткое руководство по установке для текущего состояния исходных текстов FreeBSD. Его можно найти http://people.freebsd.org/~cognet/freebsd_arm.txt[здесь].
+Составить список всех поддерживаемых устройств на всех процессорах и платах здесь нецелесообразно, однако много информации можно получить из списка рассылки и архивов, https://wiki.freebsd.org/arm[вики-страниц FreeBSD ARM], а также из https://cgit.freebsd.org/src/tree/sys/arm/conf/[файлов конфигурации ядра].
+
+=== Поддерживаемые ядра
+
+* ARM9E
+* Большинство XScale
+* Marvel Feroceon
+* Marvel Sheeva
+* ARM10E
+* ARM11J
+* Cortex A5
+* Cortex A7
+* Cortex A8
+* Cortex A9
+* Cortex A12
+* Cortex A15
+
+=== Системы-на-кристалле (SoC)
+
+* Allwinner A10/A20
+* Atmel AT91RM92 и AT91SAM9 семейства
+* Broadcom BCM2835 (используется в Raspberry Pi)
+* Cavium CNS11xx
+* Freescale i.MX51, i.MX53, i.MX6 и семейство Vybrid
+* Intel XSCALE
+* Marvell Orion, Kirkwood и Discovery Innovation семейства систем-на-кристалле
+* Marvell Armada 500 (ARMv6) и Armada XP (ARMv7)
+* NXP LPC32x0
+* Qualcomm Snapdragon
+* Rockchip RK3188
+* Samsung Exynos5 и S3C24xxx
+* Texas Instruments DaVinci Digital Media SoC
+* TI OMAP
+* Xilinx Zynq7 семейство
+
+Не все периферийные устройства поддерживаются на всех процессорах.
+
+=== Материнские платы
+
+* ArndaleBoard (Samsung Exynos5250)
+* Atmel AT91RM9200
+* BeagleBoard и BeagleBoard-xM (TI OMAP3)
+* BeagleBone
+* Colibri VF50 Evaluation Board
+* Cubieboard(1,2) (Allwinner A10/A20)
+* Device Solutions Quartz
+* Gateworks Avila GW2348 и Cambria GW2358
+* Genesi Efika MX Smarttop и Smartbook
+* Globalscale Technologies OpenRD platform
+* Google Chromebook
+* Kwikbyte KB9202B (а также более старые KB9202 и KB9202A)
+* Linksys NSLU2
+* Marvell DB-88F5182, DB-88F5281, DB-88F6281, RD-88F6281, DB-78100
+* Marvell DB-88F6781 (ARMv6)
+* Marvell DB-78460 (ARMv7)
+* Marvell Sheeva Plug и Dream Plug
+* Pandaboard (OMAP4)
+* Phytec Cosmic Board (Freescale Vybrid Family)
+* Raspberry Pi
+* Radxa Rock (В работе)
+* SBC6045 с Atmel at91sam9g45
+* Technologic Systems TS-7200 и TS-7800
+* Wandboard
+* Zedboard (Xilinx Zynq)
+
+Не все периферийные устройства поддерживаются на всех платах.
+
+[[todo]]
+== Что предстоит сделать
+
+* Необходимо добавить поддержку SATA для плат, где она в настоящее время отсутствует.
+* Другие устройства, такие как watchdog, i2c и bus, должны быть перенесены из NetBSD.
+
+[[links]]
+== Ссылки, связанные с FreeBSD/ARM
+
+* http://esd.et.ntust.edu.tw/downloads/2008_Embedded_Programming/2008_ESW/Embedded_3_ARM.pdf[Краткая история ARM]
+* Платформы, поддерживаемые NetBSD: Архитектуры CPU: http://www.netbsd.org/ports/#ports-by-cpu[Порты по архитектуре процессора]
+
+[[miniinst]]
+== Мини-руководство по установке
+
+{cognet} написал мини-руководство по установке для текущего исходного кода FreeBSD. Оно https://people.FreeBSD.org/~cognet/arm.html[доступно здесь].
 
 [[list]]
-== Список рассылки FreeBSD/ARM
+== Рассылка FreeBSD/ARM
 
-Для того, чтобы подписаться на него, пошлите по электронной почте сообщение на адрес `<freebsd-arm-subscribe@FreeBSD.org>` либо воспользуйтесь http://lists.FreeBSD.org/mailman/listinfo/freebsd-arm[интерфейсом mailman].
+Чтобы подписаться на эту рассылку, отправьте письмо на `<freebsd-arm+subscribe@FreeBSD.org>` или посетите http://lists.FreeBSD.org/subscription/freebsd-arm[веб-интерфейс].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (15.08.2023): 3c03f0a30f394a8584356c0e48119d577c5cfa33
+//
