--- a/website/content/ru/platforms/i386.adoc
+++ b/website/content/ru/platforms/i386.adoc
@@ -10,21 +10,18 @@ include::shared/ru/urls.adoc[]
 [[intro]]
 == Введение
 
-На этой странице размещена информация о платформе FreeBSD/i386. Эта архитектура поддерживает самый широкий спектр процессоров, так как большинство пользователей домашних ПК приобретают именно их. Если вы владеете компьютером любого из крупных производителей ПК (такого, как Dell(TM), HP или eMachines(R)), вероятнее всего, его процессор создан компаниями AMD(TM) или Intel(R) и попадает в эту категорию.
+На данной странице содержится информация о платформе FreeBSD/i386. FreeBSD/i386 должна поддерживать любой процессор, совместимый с Intel Pentium Pro / Pentium II (i686) или новее. Современные процессоры AMD и Intel должны работать в 64-битном режиме с использованием порта link:../amd64/[FreeBSD/amd64].
 
-[[toc]]
-== Содержание
+FreeBSD/i386 поддерживает до 4 ГБ оперативной памяти по умолчанию. Компьютеры с большим объемом оперативной памяти должны либо работать под link:../amd64/[FreeBSD/amd64], либо работать с включенным link:{faq}#memory-i386-over-4gb[расширением физических адресов (PAE)], чтобы использовать память сверх предела в 4 ГБ.
 
-* <<news,Последние новости>>
-* <<links,Информационные ресурсы>>
+== Статус
 
-[[news]]
-== Последние новости
+FreeBSD/i386 работает в 32-битном многопользовательском режиме, как в однопроцессорном, так и в многопроцессорном режиме.
 
-* FreeBSD 6.0 и более новые версии больше не поддерживают оригинальный процессор Intel 80386; этим компьютерам уже более семи лет, и они поддерживаются только во FreeBSD 5.X и более ранних версиях. Заметьте, что ядро GENERIC поддерживает процессоры 80386 только во FreeBSD 4.X и более ранних версиях.
+Платформа i386 является платформой link:{committers-guide}#archs[уровня 2] в FreeBSD 13.0 и новее.
 
-[[links]]
-== Информационные ресурсы
-
-* http://laptop.bsdgroup.de/freebsd/[Список поддерживаемых FreeBSD лэптопов]
-* link:https://wiki.FreeBSD.org/ACPI[Страница проекта ACPI]
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (25.06.2024): 78acff092287be35339d375f4a2b2c8bac9aa387
+//
