--- a/website/content/ru/platforms/mips.adoc
+++ b/website/content/ru/platforms/mips.adoc
@@ -7,48 +7,79 @@ include::shared/ru/urls.adoc[]
 
 = Проект FreeBSD/MIPS
 
-На этой странице находится информация о переносе FreeBSD на платформу MIPS.
+== Введение
+
+На этой странице находится информация о переносе FreeBSD на платформу MIPS. Обсуждение порта MIPS ведётся в рассылке https://lists.freebsd.org/subscription/freebsd-mips[freebsd-mips].
 
 == Общая информация
 
-* <<faq,FAQ о порте>>
-* <<list,Список рассылки FreeBSD/MIPS>>
+* <<status,Статус>>
+* <<hw,Замечания по аппаратному обеспечению MIPS>>
+* <<list,Рассылка FreeBSD/MIPS>>
 
-[[faq]]
-== Часто задаваемый вопросы
+[[status]]
+== Статус
 
-. <<one,Что представляет собой проект FreeBSD/MIPS?>>
-. <<two,На какое оборудование вы ориентируетесь?>>
-. <<three,Каково состояние на текущий момент?>>
-. <<four,Как можно получить FreeBSD/MIPS?>>
-. <<four,С кем можно связаться?>>
+MIPS является архитектурой link:{committers-guide}#archs[уровня 2] в FreeBSD 13.x и, как таковая, не полностью поддерживается проектом link:../../[FreeBSD].
+Поддержка MIPS прекращена, начиная с FreeBSD 14.0.
 
-[[one]]
-=== Что представляет собой проект FreeBSD/MIPS?
+[[hw]]
+== Замечания по аппаратному обеспечению FreeBSD/MIPS
 
-FreeBSD/MIPS является переносом операционной системы FreeBSD на компьютеры с процессорами MIPS R4K и выше, самыми известными из которых являются MIPS-компьютеры компании SGI.
+FreeBSD/MIPS — это порт операционной системы FreeBSD для платформ на базе процессоров MIPS. В настоящее время целью портирования являются несколько плат для разработки и встраиваемых систем с архитектурой MIPS32 и MIPS64.
 
-[[two]]
-=== На какое оборудование вы ориентируетесь?
+Составление списка всех поддерживаемых устройств для всех процессоров и плат здесь нецелесообразно, однако много информации можно получить из списка рассылки и его архивов, https://wiki.freebsd.org/FreeBSD/MIPS[вики-страниц FreeBSD/MIPS], а также из https://cgit.freebsd.org/src/tree/sys/mips/conf/[файлов конфигурации ядра].
 
-На данный момент это компьютеры MIPS компании SGI. В дальнейшем предполагается, что это и другие платформы MIPS, такие, как распространённые встраиваемые системы и неэкзотичные компьютеры в конфигурациях, похожих на те, что поставляет SGI.
+=== Процессоры
 
-[[three]]
-=== Каково состояние на текущий момент?
+Поддерживается следующий неисчерпывающий список процессоров и семейств процессоров:
 
-FreeBSD/MIPS находится на ранних стадиях разработки, посмотрите страницу о link:../projects/mips[состоянии проекта] для получения информации о ведущейся в настоящее время работе.
+* MIPS4Kc
+* MIPS24Kc
+* MIPS74Kc
+* Atheros AR71xx, AR724x, AR91xx, AR933x, AR934x
+* Cavium OCTEON
+* Семейство процессоров NetLogic XLR/XLS
+* BERI и CHERI от SRI/Cambridge — открытые ядра для ПЛИС (FPGA)
 
-[[four]]
-=== Как можно получить FreeBSD/MIPS?
+Обратите внимание, что не все периферийные устройства поддерживаются на всех процессорах.
 
-Работа над FreeBSD/MIPS ведётся в хранилище Perforce проекта FreeBSD, но иногда изменения публикуются в <<list,списке рассылки>>.
+=== Платы
 
-[[five]]
-=== С кем можно связаться?
+Поддерживаются следующие платы:
 
-mailto:jmallett@FreeBSD.org[Juli Mallett] является лидером проекта. Обратитесь к ней, если вы хотите поделиться своим кодом. Если вы просто хотите выяснить состояние этого проекта, то просто регулярно посещайте link:../projects/mips[страницу состояния проекта] или подключитесь к <<list,списку рассылки FreeBSD/MIPS>>.
+* Ubiquiti Networks Router-Station (AR7130)
+* Ubiquiti Networks Router-Station Pro (AR7161)
+* Ubiquiti Networks PicoStation M2HP (AR7241)
+* Ubiquiti Networks EdgeRouter Lite (OCTEON)
+* TP-Link TL-WR1043ND (AR9132)
+* Mikrotik RouterBoard RB450G
+* Alfa Networks Hornet UB (AR933x)
+* D-Link DIR-825 (AR7161)
+* Референсные дизайны Atheros PB44, PB47, AP94, AP96 (AR7161)
+* Референсный дизайн Atheros DB120 (AR9344)
+* 8devices Carambola-2 (AR9330)
+* Engenius ENH-200 (AR7240+AR9285)
+* Buffalo Airstation WZR-300HP B0 A1
+* Оценочная плата MIPS Malta
+* Lanner MR-320, MR-730, MR-995 (OCTEON)
+* Portwell CAM-0100 (OCTEON)
+* Radisys AMC-7211 / ATCA-7220 (OCTEON)
+* D-Link DSR-500, DSR-500N, DSR-1000 и DSR-1000N (OCTEON)
+* GE Intelligent Platforms WANIC 6354 (OCTEON)
+* Платы для разработки Cavium CN5860-EVB-NIC4, CN5650-EVB-NIC16, CN5200-EVB-MB4
+
+Обратите внимание, что не все периферийные устройства поддерживаются на всех платах.
 
 [[list]]
 == Список рассылки FreeBSD/MIPS
 
-Для того, чтобы подписаться на этот список, пошлите письмо на адрес `<freebsd-mips-subscribe@FreeBSD.org>` или воспользуйтесь http://lists.FreeBSD.org/mailman/listinfo/freebsd-mips[интерфейсом mailman].
+Присоединяйтесь к link:#list[рассылке FreeBSD/MIPS], чтобы внести свой вклад в код или узнать о статусе проекта.
+
+Для того, чтобы подписаться на этот список, пошлите письмо на адрес `<freebsd-mips+subscribe@FreeBSD.org>` или воспользуйтесь https://lists.FreeBSD.org/subscription/freebsd-mips[интерфейс mlmmj].
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (24.11.2023): d442e79f88cb138d73ae6db2faab00baeb5cb512
+//
