--- a/website/content/ru/platforms/ppc.adoc
+++ b/website/content/ru/platforms/ppc.adoc
@@ -8,9 +8,13 @@ include::shared/ru/urls.adoc[]
 
 = Проект FreeBSD/ppc
 
+== Введение
+
+Страницы проекта FreeBSD/ppc содержат информацию о портировании FreeBSD на архитектуру PowerPC(R). Как и сам порт, эти страницы все еще находятся в стадии разработки.
+
 == Общая информация
 
-* <<intro,Введение>>
+* <<status,Статус>>
 * <<news,Последние новости>>
 * <<faq,FAQ по переносу>>
 * <<hardware,Поддерживаемое оборудование>>
@@ -19,130 +23,160 @@ include::shared/ru/urls.adoc[]
 * <<doc,Документация, статьи, утилиты>>
 * <<links,Другие интересные ссылки>>
 
-[[intro]]
-== Введение
+[[status]]
+== Статус
 
-Странички проекта FreeBSD/ppc содержат информацию о портировании FreeBSD на архитектуру PowerPC(R). Также как и сам порт, эти документы находятся в процессе написания.
+Порт FreeBSD/ppc по-прежнему является платформой link:{committers-guide}#archs[уровня 2]. Это означает, что он не получает полной поддержки от нашего Директора по информационной безопасности, инженеров по выпуску релизов и сопровождающих инструментальной цепочки. Тем не менее, он поддерживается portmgr (сборка пакетов).
 
-Порт FreeBSD/ppc до сих базируется на платформе Tier-2. Это означает, что он не полностью поддерживается нашими офицером по безопасности, инженерами, отвечающими за выпуск релизов и мэйнтейнерами утилит.
+Самая актуальная информация о поддерживаемом аппаратном обеспечении в настоящее время ведется https://wiki.freebsd.org/powerpc[в вики].
 
 '''''
 
 [[news]]
 == Последние новости
 
-* *25 июня 2005* : Эта страница была серьезно переработана.
+* **13 апреля 2021**: Выпущен FreeBSD 13.0, представивший новую цель `powerpc64le` и LLVM в качестве основного компилятора. Добавлена поддержка драйверов дисков, сети и видеоконтроллера для современных машин POWER от Raptor Computing (Blackbird и Talos II) и IBM (LC922 и IC922). https://www.freebsd.org/releases/13.0R/relnotes/[Информация о релизе]
+* **22 сентября 2020**: Была представлена новая цель `powerpc64le` (64-битная с обратным порядком байт) для процессоров POWER8 и новее.
+* **29 декабря 2019**: В релизе 13.0 для целей `powerpc`, `powerpcspe` и `powerpc64` компилятор GCC4 будет заменен на LLVM, а `powerpc64` будет использовать современную спецификацию ABI OpenPower 64-Bit ELF V2.
+* **05 мая 2019**: FreeBSD был протестирован и, по всей видимости, работает на https://wiki.freebsd.org/powerpc/Raptor/Blackbird[Raptor Blackbird].
 
 '''''
 
 [[faq]]
 == Часто задаваемые вопросы
 
-. <<one,Как я могу установить FreeBSD/ppc?>>
-. <<two,Где я могу найти пакеты для платформы FreeBSD/ppc?>>
-. <<three,Как использовать порты на FreeBSD/ppc?>>
-. <<four,С кем я могу связаться?>>
+. <<install,Как установить FreeBSD/ppc>>
+. <<ports,Как использовать порты на FreeBSD/ppc?>>
+. <<ppcppc64,Какую версию выбрать: powerpc, powerpcspe, powerpc64 или powerpc64le?>>
+. <<contact,С кем можно связаться?>>
 
-[[one]]
-=== Как я могу установить FreeBSD/ppc
+[[install]]
+=== Как установить FreeBSD/ppc?
 
-Существуют ISO образы, доступные для скачивания http://people.freebsd.org/~grehan/ppc_iso[по этой ссылке]. Последний 7.0-CURRENT ISO образ может быть загружен http://people.freebsd.org/~grehan/ppc_iso/latest.iso[отсюда]. Пожалуйста, следуйте инструкциями, представленными http://people.freebsd.org/~grehan/iso_install.txt[по этой ссылке].
+Доступны ISO-образы FreeBSD {rel130-current} для загрузки. Подробности о том, как их получить, смотрите в link:../../releases/{rel130-current}R/announce/[анонсе релиза].
+FreeBSD 12.x больше не поддерживается, и его использование *категорически не рекомендуется*. Изменения в ABI делают 12.x бинарно несовместимым с 13.x и новее.
 
-[[two]]
-=== Где я могу найти пакеты для платформы FreeBSD/ppc?
+[[ports]]
+=== Как использовать порты на FreeBSD/ppc?
 
-Благодаря Питеру Грехану (Peter Grehan) и Тильман Линневе (Tilman Linneweh), вы можете найти некоторые пакеты http://people.freebsd.org/~grehan/ppc_pkgs/[тут] и http://people.freebsd.org/~arved/packages_powerpc/[тут]. Пожалуйста, заметьте, что эти пакеты на сегодняшний день довольно устарели. Если возможно, то старайтесь использовать порты.
+Обратитесь к Руководству: link:{handbook}ports#ports-using[использование коллекции портов].
 
-[[three]]
-=== Kак использовать порты на FreeBSD/ppc?
+[[ppcppc64]]
+=== Какую версию выбрать: powerpc, powerpcspe, powerpc64 или powerpc64le?
 
-Легкий путь использовать порты во FreeBSD, начиная с 6.0-RELEASe заключается в использовании portsnap. Обратитесь к Руководству, если вам нужна помощь в link:{handbook}#ports-using[использовании Коллекции Портов].
+* 64-битные системы
 
-[[four]]
-=== С кем я могу связаться?
+** *Пользователи 64-битных процессоров с двунаправленной порядком байт POWER8 и POWER9*: могут выбрать между FreeBSD/powerpc64 и FreeBSD/powerpc64le (от старшего к младшему и от младшего к старшему соответственно). FreeBSD/powerpc64 (от старшего к младшему) также поддерживает нативную работу 32-битных двоичных файлов, как и другие 64-битные платформы.
+** *Пользователи 64-битных процессоров от старшего к младшему Apple G5 и POWER7*: следует установить FreeBSD/powerpc64. Пользователи Apple G5 также могут выбрать 32-битную FreeBSD/powerpc, но FreeBSD/powerpc64 предоставляет поддержку ZFS и возможность использования более 2 ГБ ОЗУ.
 
-mailto:grehan@FreeBSD.org[Peter Grehan] - руководитель проекта. Если вы только хотите узнать о статусе проекта, обращайтесь к этой странице регулярно или присоединяйтесь к <<list,списку рассылки FreeBSD/ppc>>.
+* 32-битные системы
+** *Пользователи 32-битных процессоров Apple G3/G4*: следует использовать FreeBSD/powerpc
+** *Пользователи 32-битных процессоров Freescale MPC85XX (Routerboard RB800) и NXP QorIQ P1022 (AmigaOne A1222)*: следует использовать FreeBSD/powerpcspe
+
+[[contact]]
+=== С кем можно связаться?
+
+Основным ресурсом является <<list,рассылка FreeBSD/ppc>>.
 
 '''''
 
 [[hardware]]
-== Поддерживаемое оборудование
+== Поддерживаемое аппаратное обеспечение
 
-Порт FreeBSD/ppc должен работать на любой новой (New-World) машине. Пользователи сообщили, что FreeBSD работает на следующих машинах:
+Самая актуальная информация о поддерживаемом аппаратном обеспечении в настоящее время ведется https://wiki.freebsd.org/powerpc[в вики].
 
-[cols=",,,",options="header",]
+Порт FreeBSD/ppc должен работать на любых машинах Apple New-World (любых машинах Apple со встроенным USB-портом), а также на Sony Playstation 3.
+Порт FreeBSD/ppc также должен работать на QEMU. Подробности можно найти на https://wiki.freebsd.org/powerpc/QEMU[вики-странице powerpc/QEMU].
+
+Ранее сообщалось, что FreeBSD работает на следующих машинах:
+
+[.tblbasic]
+[cols=",,,,,",options="header",]
 |===
-|Производитель |Модель |Кто сообщил (ссылки может и не быть) |Заметки
-|Apple |iMac G3 350 MHz |mailto:diskiller@diskiller.net[Martin Minkus] |Rage 128VR
-|Apple |iMac G3 DV Special Edition |mailto:webmaster@machowto.com[David S. Besade] (http://people.freebsd.org/~flz/local/dmesg.ppc[dmesg]) |отсутствуют
-|Apple |iMac G3 Revision B |mailto:grehan@FreeBSD.org[Peter Grehan] |Rage 3D Pro 215GP, accel disabled
-|Apple |eMac 700 MHz |mailto:grehan@FreeBSD.org[Peter Grehan] |Nvidia GeForce2 MX
-|Apple |Mac Mini G4 1.4 GHz |mailto:arved@FreeBSD.org[Tilman Linneweh] (http://people.freebsd.org/~arved/stuff/minimac[dmesg]) |отсутствуют
-|Apple |Powerbook G4 1.33 GHz |mailto:grehan@FreeBSD.org[Peter Grehan] |Nvidia GeForce G5200
-|Apple |Aluminium Powerbook G4 1.5 GHz |mailto:toa@pop.agri.ch[Andreas Tobler] |отсутствуют
+|Производитель |Модель |Отправитель (ссылки) | Релиз | Архитектура | Примечания
+|A-EON |AmigaONE A1222 | mailto:jhibbits@FreeBSD.org[Justin Hibbits] | FreeBSD 13.0 | powerpcspe |
+|A-EON |AmigaONE X5000 | mailto:jhibbits@FreeBSD.org[Justin Hibbits] | FreeBSD 13.0 | powerpc64 |
+|Apple |iMac G3 350 МГц |mailto:diskiller@diskiller.net[Martin Minkus] | | | Rage 128VR
+|Apple |iMac G3 DV Special Edition |mailto:webmaster@machowto.com[David S. Besade] (https://people.FreeBSD.org/~flz/local/dmesg.ppc[dmesg]) | | | Нет
+|Apple |iMac G3 Revision B |mailto:grehan@FreeBSD.org[Peter Grehan] | | | Rage 3D Pro 215GP, ускорение отключено
+|Apple |eMac 700 МГц |mailto:grehan@FreeBSD.org[Peter Grehan] | | | NVIDIA(R) GeForce2 MX
+|Apple |Mac Mini G4 1.4 ГГц |mailto:arved@FreeBSD.org[Tilman Linneweh] (https://people.FreeBSD.org/~arved/stuff/minimac[dmesg]) | | | Нет
+|Apple |Powerbook G4 1.33 ГГц |mailto:grehan@FreeBSD.org[Peter Grehan] | | | NVIDIA(R) GeForce G5200
+|Apple |Aluminium Powerbook G4 1.5 ГГц |mailto:toa@pop.agri.ch[Andreas Tobler] | | | Нет
+|Apple |PowerMac G5 | |FreeBSD 8.0  | |
+|Apple |iMac G5 | |FreeBSD 8.0 | |
+|Apple |Xserve G5 | |FreeBSD 8.1 | |
+|Apple |PowerMac G5 (конец 2005) | |FreeBSD 8.1 | |
+|IBM | Power System S812L / 8247-21L (POWER8) |mailto:luporl@FreeBSD.org[Leandro Lupori] | FreeBSD 13.0 | powerpc64, powerpc64le |
+|IBM | Power System LC922 (POWER9) |mailto:alfredo@freebsd.org[Alfredo Dal'Ava Júnior] | FreeBSD 13.0 | powerpc64, powerpc64le |
+|IBM | Power System IC922 (POWER9) |mailto:alfredo@freebsd.org[Alfredo Dal'Ava Júnior] | FreeBSD 13.0 | powerpc64, powerpc64le | проверено с 1.5 ТБ ОЗУ
+|MikroTik | Routerboard RB800 | mailto:jhibbits@FreeBSD.org[Justin Hibbits] | FreeBSD 13.0 | powerpcspe |
+|Raptor CS | Blackbird Secure Desktop (POWER9)|mailto:alfredo@freebsd.org[Alfredo Dal'Ava Júnior] | FreeBSD 13.0 | powerpc64, powerpc64le | Прошивка v2.00, встроенный HDMI
+|Raptor CS | Talos II Desktop Development System (POWER9)|mailto:luporl@FreeBSD.org[Leandro Lupori] | FreeBSD 13.0 | powerpc64, powerpc64le | Прошивка v2.00, встроенный VGA
+|Raptor CS | Talos II 2U Rack Mount Server (POWER9)|mailto:andre.silva@eldorado.org.br[Andre Silva] | FreeBSD 13.0 | powerpc64, powerpc64le |Прошивка v2.00
 |===
 
 '''''
 
 [[list]]
-== Список рассылки FreeBSD/ppc
+== Рассылка FreeBSD/ppc
 
-Для подписки на эту рассылку, отправьте письмо на `<freebsd-ppc-subscribe@FreeBSD.org>` или воспользуйтесь http://lists.FreeBSD.org/mailman/listinfo/freebsd-ppc[интерфейсом mailman].
+Чтобы подписаться на эту рассылку, отправьте электронное письмо на адрес `<freebsd-ppc+subscribe@FreeBSD.org>` или посетите https://lists.FreeBSD.org/subscription/freebsd-ppc[интерфейс mlmmj].
 
 '''''
 
 [[issues]]
 == Известные проблемы
 
-* Не поддержки AltiVec.
-* Встроенные BMAC+ ethernet карточки не работают. Продолжается работа над bm(4) драйвером, доступным на персональной страничке Peter Grehan http://people.freebsd.org/~grehan/[here] (see if_bm.c and if_bmreg.h).
-* Нет графического курсора мыши в консоли.
-* Не работает Fdisk.
-* Поддерживаются только USB клавиатуры.
-* Если у вас имеется оборудование с поддержкой Bluetooth, то существует 'поддельный' порт OHCI и устройства, которые могут использоваться для доступа к беспроводной клавиатуре или мыши. Проблема заключается в том, что оно исследуется перед фиксированной (fixed) клавиатурой/мышью и является первым на очереди к syscons. Чтобы решить это проблему, PCI слот, ассоциированный с проблематичным ohci2 может быть отключен в загрузчике:
+* Raptor CS Blackbird и Talos II: последние версии прошивки больше не сообщают адрес памяти встроенного кадрового буфера в дереве устройств. Обходное решение — добавить содержимое ниже к аргументам ядра при загрузке или установить его постоянно в /boot/etc/kboot.conf:
+:
 +
 ....
-OK set hint.pcib.1.skipslot=26
+hw.ofwfb.physaddr=0x000600c280000000
 ....
-* Для машин, базирующихся на ATI Radeon:
-** Проверку диапазона ofw syscons нужно отключить, используя sysctl hw.ofwfb.relax_mmap.
-** Нужен специальный radeon http://people.freebsd.org/~grehan/radeon_driver.c[драйвер]. Вы должны добавить следующее в раздел Section "Device" файла xorg.conf
+Примечание: FreeBSD 13.1, который еще не выпущен, автоматически определяет адрес памяти с помощью альтернативного метода.
 +
-....
-Option "iBookHacks" "on"
-....
-* Существует известная ошибка в загрузчике, что не дает загружать альтернативное ядро, и поэтому тестирование вашего собственного ядра рискованно. При запуске загрузчика из приглашения (prompt) Open Firmware, укажите либо несуществующий раздел, либо тот, который не имеет ядра на нем, либо не является UFS разделом:
+
+* IBM POWER8 и POWER9: На 2021-11-30 прошивка IBM POWER9 и некоторых машин IBM POWER8 содержит версию kexec-lite с https://github.com/antonblanchard/kexec-lite/pull/9[регрессией], которая ошибочно вычисляет точку входа ядра FreeBSD. Обходное решение: в консоли petitboot загрузите http://drop.rtk0.net/kexec и используйте его вручную для загрузки ядра. Благодарим mailto:bdragon@freebsd.org[Brandon Bergren] за предоставление исправленного двоичного файла.
+
+* На машинах Apple New-World существует известная ошибка в загрузчике, которая не позволяет загрузить альтернативное ядро, поэтому тестирование вашего ядра сопряжено с риском. При загрузке загрузчика из командной строки Open Firmware укажите раздел, который либо не существует, либо не имеет ядра для загрузки, либо не является разделом UFS:
 +
 ....
 0 > boot hd:loader hd:0
 ....
 +
-На этом этапе, вы можете установить currdev и вручную загрузить ядро:
+На этом этапе вы можете установить currdev и вручную загрузить ядро:
 +
 ....
-OK set currdev=hd:14
+OK set currdev="hd":14
 OK load /boot/kernel/kernel.save
 ....
 
 '''''
 
 [[doc]]
-== Документация, статьи, утилиты
+== Документация, технические документы, утилиты
 
-* http://e-www.motorola.com/brdata/PDFDB/docs/MPCFPE32B.pdf[Документация на чип PowerPC]
-* http://www.firmworks.com/QuickRef.html[Кратко о Open Firmware]
-* http://developer.apple.com/technotes/tn/tn1061.html["TN1061: Основы Open Firmware, часть 1 - Интерфейс Пользователя"]
-* http://developer.apple.com/technotes/tn/tn1062.html["TN1062: Основы Open Firmware, часть 2 - Дерево Устройств"]
-* http://developer.apple.com/techpubs/hardware/hardware2.html[Документы по оборудованию Apple для разработчиков]
-* http://developer.apple.com/technotes/tn/tn2004.html["TN2004: Отладка Open Firmware, используя Telnet"]
-* http://developer.apple.com/technotes/tn/tn2023.html["TN2023: Open Firmware Ethernet Debugging II - Telnet Downloading"]
-* http://developer.apple.com/technotes/tn/tn2001.html["TN2001: Запуск Файлов с жёсткого диска в Open Firmware"]
-* http://sourceware.cygnus.com/psim/[psim] - Симулятор PowerPC, доступный, как порт FreeBSD в http://www.freshports.org/?package=psim-freebsd[emulators/psim-freebsd]
+* http://www.freescale.com/files/product/doc/MPCFPE32B.pdf[Документация по 32-битным чипам PowerPC]
+* http://www.firmworks.com/QuickRef.html[Краткий справочник по Open Firmware]
+* https://developer.apple.com/legacy/library/technotes/tn/tn1061.html["TN1061: Основы Open Firmware, Часть 1 - Пользовательский интерфейс"]
+* https://developer.apple.com/legacy/library/technotes/tn/tn1062.html["TN1062: Основы Open Firmware, Часть 2 - Дерево устройств"]
+* http://developer.apple.com/legacy/mac/library/navigation/[Документация для разработчиков аппаратного обеспечения Apple]
+* http://web.archive.org/web/20080514111646/http://developer.apple.com/technotes/tn/tn2004.html["TN2004: Отладка Open Firmware с использованием Telnet"]
+* http://web.archive.org/web/20080509173539/http://developer.apple.com/technotes/tn/tn2023.html["TN2023: Отладка Ethernet в Open Firmware II - Загрузка через Telnet"]
+* https://developer.apple.com/legacy/library/technotes/tn/tn2001.html["TN2001: Запуск файлов с жесткого диска в Open Firmware"]
+* https://openpowerfoundation.org/?resource_lib=64-bit-elf-v2-abi-specification-power-architecture["Спецификация ABI 64-Bit ELF V2"]
 
 [[links]]
 == Другие интересные ссылки
 
-* http://wikitest.freebsd.org/moin.cgi/powerpc[Страничка wiki, посвященная проекту FreeBSD/ppc]
-* http://lists.freebsd.org/pipermail/freebsd-ppc/2005-January/000814.html[Описание, подготовленное Гарансом А. Дрошенным (Garance A. Drosehn) о работе FreeBSD на Mac Mini]
+* https://wiki.freebsd.org/powerpc[Вики-страница FreeBSD/ppc]
+* https://lists.freebsd.org/pipermail/freebsd-ppc/2005-January/000814.html[Описание Garance A. Drosehn о FreeBSD на Mac Mini]
 * http://www.NetBSD.org/Ports/macppc/[NetBSD/macppc]
 * http://www.OpenBSD.org/macppc.html[OpenBSD/macppc]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (05.08.2024): 005854895639858b13987262f046d1861912f46f
+//
