--- a/website/content/ru/platforms/sparc.adoc
+++ b/website/content/ru/platforms/sparc.adoc
@@ -3,7 +3,6 @@ title: "Проект FreeBSD/sparc64"
 sidenav: developers
 ---
 
-include::shared/authors.adoc[]
 include::shared/releases.adoc[]
 include::shared/ru/urls.adoc[]
 
@@ -12,87 +11,107 @@ include::shared/ru/urls.adoc[]
 [[intro]]
 == Введение
 
-Эта страница содержит информацию о порте the FreeBSD на архитектуру Sun Microsystem UltraSPARC(R). UltraSPARC имеет статус link:{committers-guide}#archs[Tier 1], и полностью поддерживается проектом link:https://www.FreeBSD.org/ru[FreeBSD]. Тем не менее, порт не настолько зрелый, как существующие i386 или alpha порты. Обсуждение порта UltraSPARC производится в рассылке http://lists.freebsd.org/mailman/listinfo/freebsd-sparc64[freebsd-sparc].
+На данной странице содержится информация о портировании FreeBSD на архитектуры SPARC64(R) компании Fujitsu и UltraSPARC(R) компании Oracle. Обсуждение этого порта ведется в рассылке https://lists.freebsd.org/subscription/freebsd-sparc64[freebsd-sparc].
 
-[[toc]]
-== Содержание
+== Оглавление
 
-* <<who,Кто занимается портом>>
-* <<news,Последние новости>>
-* <<hw,Список оборудования>>
-* <<todo,Что требуется сделать>>
-* <<links,Дополнительная информация>>
+* <<status,Статус>>
+* <<hw,Список аппаратного обеспечения>>
+* <<list,Рассылка FreeBSD/sparc64>>
+* <<links,Интересные материалы по FreeBSD/sparc64>>
 
-[[who]]
-== Кто занимается портом
+[[status]]
+== Статус
 
-Порт FreeBSD создавался благодаря работе этих людей, как публичной, так и скрытой:
-
-* {jake}
-* {tmm}
-* {obrien}
-
-[[news]]
-== Последние новости
-
-* *25 октября 2004* : Звуковой драйвер CS4231 был портирован из http://www.OpenBSD.org/[OpenBSD], и теперь рабочие станции с поддержкой SBus, оборудованные звуковым оборудованием (Ultra 1E, Ultra 2) получили поддержку звука.
-* *9 октября 2004* : Драйвер auxio был портирован из http://www.NetBSD.org/[NetBSD].
-* *10 июня 2004* : Драйвер esp был портирован из http://www.NetBSD.org/[NetBSD], и теперь Ultra 1E и Ultra 2 имеют поддержку SCSI.
-* *18 января 2003* : Драйвер if_xl http://docs.FreeBSD.org/cgi/mid.cgi?200301190023.h0J0Nx0N068255[теперь] поддерживается в -CURRENT.
-* *10 декабря 2002* : Ежедневные снимки 5.0-CURRENT теперь доступны на ftp://ftp2.FreeBSD.org/pub/FreeBSD/snapshots/sparc64[ftp2.FreeBSD.org].
+UltraSPARC является архитектурой уровня link:{committers-guide}#archs[Уровень 2] вплоть до FreeBSD 12.x. Начиная с FreeBSD 13.0 и новее, она больше не поддерживается.
 
 [[hw]]
-== Список оборудования
+== Список аппаратного обеспечения
 
-Ниже приведен список поддерживаемых платформ. SMP поддерживается на всех поддерживаемых системах, содержащих более чем 1 процессор. За полной информацией обращайтесь к link:https://www.FreeBSD.org/releases/{rel120-current}R/hardware-sparc64.html[информации о релизе] того link:https://www.FreeBSD.org/releases/[релиза], который вы используете.
+Далее следует перечень поддерживаемых систем. SMP поддерживается на всех поддерживаемых системах, содержащих более одного процессора. За полной информацией обращайтесь к link:../../releases/{rel120-current}r/hardware/[информации об аппаратной совместимости] link:../../releases/[релиза], который вы используете.
 
-* Blade 100
-* Blade 150
-* Enterprise 220R
-* Enterprise 250
-* Enterprise 420R
-* Enterprise 450
-* Fire V100
-* Fire V120
-* Netra(TM) T1 105
-* Netra T1 AC200/DC200
-* Netra t 1100
-* Netra t 1120
-* Netra t 1125
-* Netra t 1400/1405
-* Netra 120
-* Netra X1
-* SPARCEngine(R) Ultra Axi
-* SPARCEngine Ultra AXmp
-* Ultra 1E
-* Ultra 2
-* Ultra(TM) 5
-* Ultra 10
-* Ultra 30
-* Ultra 60
-* Ultra 80
+* Naturetech GENIALstation 777S
+* Sun Blade 100
+* Sun Blade 150
+* Sun Enterprise 150
+* Sun Enterprise 220R
+* Sun Enterprise 250
+* Sun Enterprise 420R
+* Sun Enterprise 450
+* Sun Fire B100s (поддержка встроенных сетевых карт впервые появилась в 8.1-RELEASE)
+* Sun Fire V100
+* Sun Fire V120
+* Sun Netra(T) T1 100/105
+* Sun Netra T1 AC200/DC200
+* Sun Netra t 1100
+* Sun Netra t 1120
+* Sun Netra t 1125
+* Sun Netra t 1400/1405
+* Sun Netra 120
+* Sun Netra X1
+* Sun SPARCEngine(R) Ultra AX1105
+* Sun SPARCEngine Ultra AXe
+* Sun SPARCEngine Ultra AXi
+* Sun SPARCEngine Ultra AXmp
+* Sun SPARCEngine CP1500
+* Sun Ultra(T) 1
+* Sun Ultra 1E
+* Sun Ultra 2
+* Sun Ultra 5
+* Sun Ultra 10
+* Sun Ultra 30
+* Sun Ultra 60
+* Sun Ultra 80
+* Sun Ultra 450
 
-Следующие системы поддерживаются, но могут быть загружены только по сети, поскольку SCSI контроллер не поддерживается. Идет работа по добавлению поддержки этого SCSI контроллера. Эти системы могут работать с esp драйвером, импортированным из http://www.NetBSD.org[NetBSD].
+Эти системы поддерживаются FreeBSD частично. В частности, контроллеры Fibre Channel в системах на базе SBus не поддерживаются. Однако их можно использовать с SCSI-контроллером, поддерживаемым драйвером esp(4) (контроллеры Sun ESP SCSI, Sun FAS Fast-SCSI и Sun FAS366 Fast-Wide SCSI).
 
-* Enterprise 3500
-* Enterprise 4500
+* Sun Enterprise 3500
+* Sun Enterprise 4500
 
-Следующие системы не поддерживаются.
+Начиная с 7.2-RELEASE, FreeBSD также поддерживает системы sparc64 на базе Sun UltraSPARC III и новее, включая следующие известные рабочие системы:
 
-* Любая система с процессором UltraSPARC III или выше.
-* Ultra 1
+* Sun Blade 1000
+* Sun Blade 1500
+* Sun Blade 2000
+* Sun Blade 2500
+* Sun Fire 280R
+* Sun Fire V210
+* Sun Fire V215 (поддержка впервые появилась в 7.3-RELEASE и 8.1-RELEASE)
+* Sun Fire V240
+* Sun Fire V245 (поддержка впервые появилась в 7.3-RELEASE и 8.1-RELEASE)
+* Sun Fire V250
+* Sun Fire V440 (поддержка встроенных сетевых карт впервые появилась в 7.3-RELEASE и 8.0-RELEASE)
+* Sun Fire V480 (только монтажные панели 501-6780 и 501-6790, поддержка которых впервые появилась в 7.3-RELEASE и 8.1-RELEASE; другие монтажные панели могут работать, начиная с 8.3-RELEASE и 9.0-RELEASE)
+* Sun Fire V880
+* Sun Fire V890 (поддержка впервые появилась в 7.4-RELEASE и 8.1-RELEASE, только конфигурации CPU без смешения Ultrasparc IV/IV+)
+* Sun Netra 20/Netra T4
 
-Любая система с процессором *не* UltraSPARC III или выше, которой нет в списке, скорее всего будет работать, но ее тестирование не было выполнено. Если у Вас есть система, не приведенная в списке, пожалуйста проверьте ее и дайте mailto:freebsd-sparc@FreeBSD.org[нам] знать о ней.
+Эти системы Sun UltraSPARC не тестировались, но считается, что они также поддерживаются FreeBSD:
 
-[[todo]]
-== Что требуется сделать
+* Sun Fire V125
+* Sun Fire V490 (поддержка впервые появилась в 7.4-RELEASE и 8.1-RELEASE, только конфигурации CPU без смешения Ultrasparc IV/IV+)
 
-* Обновлять эту страницу чаще.
+Начиная с 7.4-RELEASE и 8.1-RELEASE, FreeBSD также поддерживает системы sparc64 на базе Fujitsu SPARC64 V, включая следующие известные рабочие системы:
+
+* Fujitsu PRIMEPOWER(R) 250
+
+Эти системы Fujitsu SPARC64 не тестировались, но считается, что они также поддерживаются FreeBSD:
+
+* Fujitsu PRIMEPOWER 450
+* Fujitsu PRIMEPOWER 650
+* Fujitsu PRIMEPOWER 850
+
+Если у вас есть система, не указанная здесь, пожалуйста, испытайте ее и дайте mailto:freebsd-sparc@FreeBSD.org[нам] знать.
+
+[[list]]
+== Рассылка FreeBSD/sparc64
+
+Чтобы подписаться на эту рассылку, отправьте электронное письмо на адрес `<freebsd-sparc64+subscribe@FreeBSD.org>` или посетите https://lists.FreeBSD.org/subscription/freebsd-sparc64[интерфейс mlmmj].
 
 [[links]]
-== Дополнительная информация
+== Интересные материалы
 
-* http://www.sun.com/processors/manuals/[Руководства пользователя по процессорам UltraSPARC]
-* http://www.sparc.org/standards.html[Стандартные документы SPARC]
+* http://www.sparc.org/technical-documents-test-2/[Стандарты SPARC и технические документы]
 * http://www.netbsd.org/Ports/sparc64/[NetBSD/sparc64]
 * http://www.openbsd.org/sparc64.html[OpenBSD/sparc64]
