--- a/website/content/ru/features.adoc
+++ b/website/content/ru/features.adoc
@@ -5,45 +5,116 @@ sidenav: about
 
 = О технологических преимуществах FreeBSD
 
-== FreeBSD предоставляет множество продвинутых возможностей.
+== FreeBSD предоставляет множество уникальных возможностей.
 
-Вне зависимости от типа вашего приложения вы хотите, чтобы ресурсы системы использовались максимально эффективно. Средоточие FreeBSD на производительности, сетевом взаимодействии и хранении данных вкупе с простым системным администрированием и прекрасной документацией позволяет достичь этого.
+Вне зависимости от типа вашего приложения вы хотите, чтобы ресурсы системы использовались максимально эффективно.
+Средоточие FreeBSD на производительности, сетевом взаимодействии и хранении данных вкупе с простым системным администрированием и прекрасной документацией позволяет достичь этого.
 
 === Полноценная операционная система, основанная на 4.4BSD.
 
-История FreeBSD берет начало из дистрибутивов *BSD*, выпущенных Группой Исследования Вычислительных Систем (Computer Systems Research Group) Калифорнийского Университета (Беркли). Более 10 лет работы было вложено в улучшение BSD, в добавление ведущей в индустрии SMP, многопоточности и сетевой производительности, а также в новые инструменты управления, файловые системы и функции безопасности. В итоге FreeBSD можно обнаружить по всему Интернету, в операционных системах опорных маршрутизаторов, на корневых серверах имен, в работе хостинга крупных веб-сайтов и как основу для широко используемых десктопных операционных систем. Это возможно только благодаря разнообразию участников и всемирному масштабу свободного Проекта FreeBSD.
+link:https://freebsdfoundation.org/freebsd/timeline/[История FreeBSD] берет начало из дистрибутивов *BSD*, выпущенных Группой Исследования Вычислительных Систем (Computer Systems Research Group) Калифорнийского Университета (Беркли).
+Десятки лет работы было вложено в улучшение масштабируемости, сетевой производительности, а также в новые инструменты управления, файловые системы, безопасность и другие функуии.
+В итоге FreeBSD можно обнаружить по всему Интернету, в операционных системах опорных маршрутизаторов, на корневых серверах имен, в работе хостинга крупных веб-сайтов и как основу для широко используемых десктопных операционных систем.
 
-=== FreeBSD предлагает продвинутые возможности операционной системы, что делает ее идеальной для разных сфер применения: от встраиваемого окружения до мультипроцессорных серверов класса hi-end.
+[[features]]
+== Возможности
 
-С выходом в феврале 2008 года версии *FreeBSD 7.0* система предлагает много новых возможностей и улучшения в производительности. С фокусировкой на хранении данных и мультипроцессорной производительности FreeBSD 7.0 выпущена с поддержкой *файловой системы ZFS* от Sun и *хорошо масштабируемой мультипроцессорной производительностью*. Бенчмарки показали, что FreeBSD обеспечивает вдвое большую производительность MySQL и PostgreSQL по сравнению с текущими системами Linux на 8-ядерных серверах.
+[[openzfs]]
+=== OpenZFS
 
-* *SMPng*: После семи лет разработки расширенной поддержки SMP FreeBSD 7.0 достигла поставленной цели получения мелкогранулированного механизма синхронизации в ядре, который обеспечивает линейную масштабируемость на более, чем 8, ядрах CPU на большинстве нагрузок. В FreeBSD 7.0 почти полностью устранена большая блокировка (Giant lock) и целиком убрана из уровня хранения CAM и клиента NFS, выполнен переход на более дифференцированную (fine-grained) синхронизацию в сетевой подсистеме. Значительная работа также была проделана для оптимизации планировщика ядра и примитивов синхронизации, опциональный планировщик ULE обеспечивает привязку потоков к CPU и очереди запуска для каждого CPU для уменьшения накладных расходов и повышения эффективности работы кеша. Библиотека потоков libthr, реализующая 1:1 многопоточность, используется теперь по умолчанию. Бенчмарки показывают значительное преимущество в производительности над другими операционными системами UNIX(R) на идентичном многоядерном оборудовании и отражают долгие инвестиции в технологию SMP для ядра FreeBSD.
-* *Файловая система ZFS*: Sun ZFS - это современная файловая система, предлагающая простое администрирования, транзакционную семантику и непрерывную целостность данных. От самовосстановления до встроенной компрессии, raid, снапшотов и управления томами ZFS позволит системным администраторам FreeBSD простой способ управления большими массивами данных.
-* *Оптимизация для 10gbps сетей*: С оптимизированными драйверами устройств от всех основных производителей 10gbps сетевого оборудования FreeBSD 7.0 получила обширную оптимизацию сетевого стека для высокопроизводительных нагрузок, включая автомасштабирование сокетных буферов, TCP Segment Offload (TSO), Large Receive Offload (LRO), прямую диспетчеризацию сетевого стека и балансировку нагрузки при работе TCP/IP на множестве CPU с поддержкой карт 10gbps или при одновременном использовании нескольких сетевых интерфейсов. Полная поддержка от производителя доступна у Chelsio, Intel, Myricom и Neterion.
-* *SCTP*: FreeBSD 7.0 включает эталонную реализацию нового протокола передачи с управлением потоком IETF - Stream Control Transmission Protocol (SCTP), предназначенный для поддержки VoIP, телекоммуникаций и других приложений со строгими требованиями к надежности и передачей переменного качества и с такими возможностями, как многолучевая (multi-path) доставка, отказоустойчивость (fail-over) и многопоточность (multi-streaming).
-* *Wireless*: FreeBSD 7.0 поставляется со значительно улучшенной поддержкой беспроводной связи, включая мощные карты на основе Atheros, новые драйверы для карт Ralink, Intel и ZyDAS, WPA, фоновое сканирование и роуминг и 802.11n.
-* *Новые аппаратные архитектуры*: FreeBSD 7.0 включает значительно улучшенную поддержку для встраиваемой архитектуры ARM, а также первоначальную поддержку для платформы Sun Ultrasparc T1.
+ZFS — это не просто файловая система, она принципиально отличается от традиционных файловых систем.
+Объединение традиционно раздельных ролей программного RAID, менеджера томов и файловой системы предоставляет ZFS уникальные преимущества.
 
-FreeBSD имеет долгую историю разработки расширенных возможностей операционной системы; о некоторых из них можно прочитать ниже:
+Три основные цели ZFS:
 
-* *Объединённый кэш виртуальной памяти и буферов файловых систем* оптимизирует распределение памяти и дискового кэша, используемого программами. В результате программы получают прекрасный менеджер памяти и высокопроизводительный доступ к дискам, а системный администратор избавляется от необходимости настройки размеров кэша.
-* *Модули совместимости* позволяют программам, предназначенным для выполнения в других операционных системах, включая Linux, SCO UNIX и System V Release 4, работать во FreeBSD.
-* *Мягкие обновления* увеличивают производительность файловой системы, не жертвуя надёжностью и стабильностью. Анализ действий над мета-данными позволяет не производить их все синхронно. Вместо этого сохраняется внутренняя информация о текущих операциях с мета-данными, которая используется для кэширования, изменения этих операций, комбинирования последовательных операций над одними и теми же файлами, и реорганизации этих операций так, чтобы они производились более эффективно. Механизмы фоновой проверки файловой системы и снапшотов файловой системы построены на целостности и основах производительности мягких обновлений.
-* *Снапшоты файловых систем* предоставляют администраторам механизм атомарных снапшотов файловой системы в целях резервного копирования с использованием свободного пространства в файловой системе, также содействуя использованию *background fsck*, что дает возможность сразу достигать многопользовательского режима без ожидания операций очистки файловой системы из-за отключений питания.
-* Поддержка *IP Security (IPsec)* позволяет улучшить безопасность при работе в сети и обеспечить поддержку Интернет-протокола следующего поколения IPv6. Реализация FreeBSD IPsec включает поддержку широкого спектра *криптографического аппаратного обеспечения*.
-* *Встроенная поддержка IPv6* через стек KAME IPv6 позволяет провести бесшовную интеграцию FreeBSD в сетевые окружения следующего поколения. FreeBSD также поставляется с многочисленными приложениями, расширенными для поддержки IPv6!
-* *Многопоточная SMP архитектура* обеспечивает параллельное исполнение ядра на нескольких процессорах, а *вытесняющая многозадачность ядра* позволяет высокоприоритетным задачам ядра вытеснять остальные процессы, снижая время ожидания. Сюда же входят *многопоточный сетевой стек* и *многопоточная подсистема виртуальном памяти*. Начиная с FreeBSD 6.x поддержка полностью параллельного VFS дает возможность файловой системе UFS выполняться на множестве процессоров одновременно, распределяя нагрузку ввода/вывода, требовательного к CPU.
-* *Многопоточая модель M:N через pthreads* делает возможным масштабируемое исполнение потоков на множестве CPU, ставя множество пользовательских потоков в соответствие малому количеству *Kernel Schedulable Entities*. С принятием модели *Scheduler Activation* такой подход к многопоточности может быть адаптирован к специфическим требованиям широкого набора приложений.
-* *Подключаемый сетевой стек Netgraph* позволяет разработчикам динамически и легко расширять сетевой стек через изолированные разделенные сетевые абстракции. Узлы Netgraph позволяют реализовать широкий набор новых сетевых сервисов, включая инкапсуляцию, тунеллирование, шифрование и адаптацию производительности. В результате, быстрое прототипирование и введение в эксплуатацию расширенных сетевых сервисов может быть осуществлено намного проще и с меньшим числом ошибок.
-* *Расширенный механизм безопасности ядра TrustedBSD MAC Framework* позволяет разработчикам настраивать модель безопасности операционной системы для специфического окружения, от создания ужесточающих политик до внедрения конфиденциальности политик целостности на мандатных метках. В простые политики безопасности входят *Многоуровневая безопасность (MLS)* и *Защита целостности Biba*. В сторонние модули входит *SEBSD*, базирующаяся на FLASK реализация концепции *Type Enforcement*.
-* *TrustedBSD Audit* - это сервис записи в журнал событий безопасности, обеспечивающий дифференцированную, безопасную, надежную запись в журнал системных событий через сервис аудита. Администраторы могут конфигурировать источник и детализацию при регистрации пользователей, отслеживании доступа к файлам, исполнении команд, сетевой активности, входах в систему и ряде другого поведения системы. Каналы аудита позволяют подключать инструменты IDS к сервису аудита ядра и подписываться к требуемым для мониторинга безопасности событиям. FreeBSD поддерживает формат файлов и API промышленного стандарта BSM audit trail, позволяющий существующим инструментам BSM запускаться с небольшими изменениями или вовсе без них. Данный формат файла используется в Solaris и Mac OS X, что открывает возможности для мгновенного взаимодействия и единообразного анализа.
-* *Подключаемый уровень дискового хранилища GEOM* предоставляет быструю разработку новых сервисов хранения с чистой интеграцией в существующую подсистему хранения FreeBSD. GEOM обеспечивает целостную и когерентную модель обнаружения и наложения сервисов хранения, делая возможным простую организацию RAID и управления дисковыми томами.
-* *Шифрование дисков на базе GEOM (GBDE)* обеспечивает строгую криптографическую защиту с использованием фреймворка GEOM и может защищать файловые системы, устройства swap и накопители с прочим характером использования.
-* *Очереди ядра* позволяют программам более эффективно реагировать на различные асинхронные события, включая файловый и сетевой ввод/вывод, повышая производительность работы системы и приложений.
-* *Входящие фильтры* позволяют приложениям, интенсивно работающим с соединениями, например, веб-серверам, полностью передать часть своей работы ядру операционной системы, повышая тем самым производительность.
+* Целостность данных
 
-=== Во FreeBSD имеется масса возможностей по обеспечению информационной безопасности и защиты сетей и серверов.
+* Объединенное хранилище
 
-Разработчики FreeBSD ставят заботу об информационной безопасности в один ряд с производительностью и стабильностью. В ядро FreeBSD включена поддержка *межсетевого экрана на сеансовом уровне (stateful)*, а также других сервисов, таких как *проксирующие IP-шлюзы*, *списки контроля доступа*, *мандатный контроль доступа*, *виртуальный хостинг на основе jail* и *хранилище с криптографической защитой*. Эти возможности могут быть использованы для создания хорошо защищаемого хостинга взаимного недоверенных клиентов или потребителей, жесткого разделения сетевых сегментов и создания безопасных каналов очистки информации и контроля информационных потоков.
+* Производительность.
 
-Во FreeBSD имеется поддержка криптографического программного обеспечения, безопасных командных оболочек, аутентификации Kerberos, "виртуальных серверов" с использованием jail, сервисов, выполняющих chroot для ограничения доступа приложений к файловой системе, средств Secure RPC и списков доступа для сервисов, поддерживающих TCP-обработчики.
+[[zfs-boot-environments]]
+=== Загрузочные окружения ZFS
+Загрузочное окружение ZFS — это загружаемый клон/снимок специально выбранных частей системы.
+
+Области применения включают:
+
+* Надежные обновления/изменения системы
+* Создание безопасного резервного загрузочного окружения ZFS перед обновлением или изменениями системы
+* Обновление нового (неактивного) окружения без изменения активного
+* Выполнение обновления и тестирование результатов внутри клетки (jail)
+* Копирование/перемещение загрузочного окружения ZFS на другую машину
+* Значительная переконфигурация (Bareos/Postfix/...)
+* Массовое развертывание большого количества серверов с одним настроенным загрузочным окружением
+* Резервное копирование на уровне оборудования.
+
+[[jails]]
+=== Клетки (jail)
+
+Клетки появились в FreeBSD 4.X.
+
+Они построены на основе man:chroot[8], который изменяет корневой каталог.
+Это создает безопасную среду, отделенную от остальной системы.
+Процессы, созданные в окружении клетки, не могут получить доступ к файлам или ресурсам за его пределами.
+
+Клетки улучшают chroot несколькими способами.
+В традиционной chroot-среде процессы ограничены частью файловой системы.
+Остальные системные ресурсы, системные пользователи, запущенные процессы и сетевая подсистема являются общими для chroot-процессов и процессов хост-системы.
+Клетки дополнительно ограничивают доступ к файловой системе, набору пользователей и сетевой подсистеме.
+Доступны более детализированные средства контроля доступа.
+
+[[ports-collection]]
+=== Коллекция портов
+
+Более 35 000 приложений и библиотек link:https://ports.freebsd.org[портировано] в FreeBSD.
+Эта архитектура позволяет легко настраивать параметры компиляции для многих портов.
+
+[[virtualization]]
+=== Виртуализация
+
+link:https://bhyve.org/[bhyve]: гипервизор с лицензией BSD, не требующий поддержки устаревших технологий, который запускает все поддерживаемые версии FreeBSD, а также другие операционные системы с поддержкой UEFI, включая, но не ограничиваясь link:https://www.openbsd.org/[OpenBSD], link:https://www.microsoft.com/en-us/windows/[Windows(R)] и link:https://kernel.org/[Linux(R)], с использованием bhyve-firmware.
+
+[[linuxulator]]
+=== Совместимость с исполняемыми файлами Linux (Linuxulator)
+
+Совместимость с исполняемыми файлами Linux, часто называемая link:https://wiki.freebsd.org/Linuxulator[Linuxulator], позволяет FreeBSD запускать многие неизмененные исполняемыми файлами Linux.
+Это не связано с виртуальными машинами или эмуляцией;
+вместо этого она предоставляет исполняемым файлам интерфейсы ядра, идентичные тем, которые предоставляет настоящее ядро Linux.
+Linuxulator сравним с запуском 32-битных FreeBSD-бинарников на 64-битном ядре FreeBSD.
+
+[[dtrace]]
+=== DTrace
+
+DTrace, также известный как Dynamic Tracing, был разработан Sun Microsystems(TM) для поиска узких мест производительности в рабочих и предпроизводственных системах.
+Кроме того, DTrace может помочь в исследовании и отладке неожиданного поведения в ядре и в пользовательском пространстве.
+
+DTrace обладает впечатляющим набором функций.
+Он поддерживает сценарии.
+Разработчики могут использовать язык DTrace D для создания утилит для пользовательского профилирования.
+
+Реализация FreeBSD предоставляет полную поддержку DTrace для ядра и экспериментальную поддержку для пользовательского пространства.
+DTrace для пользовательского пространства позволяет пользователям выполнять трассировку границ функций для пользовательских программ с использованием поставщика трассировки по идентификатору процесса (pid) и вставлять статические пробы в пользовательские программы для последующей трассировки.
+
+[[capsicum]]
+=== Capsicum
+Capsicum позволяет запускать в песочнице несколько программ, которые работают в «режиме возможностей» (capabilities mode), таких как:
+
+* tcpdump
+* dhclient
+* hast
+* rwhod
+* kdump.
+
+[[vnet]]
+=== Сетевая виртуализация (VNET)
+
+VNET виртуализирует сетевой стек.
+Основная идея заключается в преобразовании глобальных ресурсов (в первую очередь переменных) в ресурсы для каждого сетевого стека и обеспечении доступа к ним и управления ими функциями, sysctl, обработчиками событий и т.д. в контексте правильного экземпляра.
+Каждый (виртуальный) сетевой стек прикреплен к prison (тюрьме), при этом vnet0 является неограниченным сетевым стеком по умолчанию базовой системы.
+Возможности `VIMAGE` могут использоваться независимо для создания полностью виртуализированных сетевых топологий, а man:jail[8] может напрямую использовать преимущества полностью виртуализированного сетевого стека.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (30.12.2024): a63b1f71e2d14a43f8c8885db65dd52e078d68cd
+//
